# rust-realworld-example-app

./: Cargo.toml  readme.md
config/: development.toml
docs/requests/article/: create
docs/requests/user/: get  login  register
migrations/2018-07-17-164201_create_users/: up.sql
migrations/2018-07-17-165350_create_articles/: down.sql  up.sql
migrations/2018-07-17-170009_create_comments/: up.sql
migrations/2018-07-17-170527_create_tags/: down.sql  up.sql
migrations/2018-07-17-171454_create_favorites/: down.sql  up.sql
migrations/2018-07-17-171835_create_follows/: up.sql
src/: lib.rs  main.rs
src/core/: mod.rs  utils.rs
src/core/types/: article.rs  error.rs  mod.rs  token.rs  user.rs
src/core/types/io/: get_current_user.rs  login_user.rs  mod.rs  register_user.rs  update_user.rs
src/core/usecases/: create_article.rs  get_current_user.rs  login_user.rs  mod.rs  register_user.rs  update_user.rs
src/db/: mod.rs  pool.rs  schema.rs
src/db/models/: article.rs  user.rs
src/db/repo/: article.rs  mod.rs  token.rs  user.rs
src/http/: api.rs  mod.rs
src/http/errors/: handlers.rs  io.rs
src/http/guards/: auth.rs  db.rs  mod.rs
src/http/resources/articles/: handlers.rs  io.rs
src/http/resources/users/: handlers.rs  io.rs  mod.rs
src/http/users/: handlers.rs  io.rs
src/settings/: mod.rs
tests/: login_user.rs
