[package]
name = "rust-realworld-example-app"
version = "0.1.0"
authors = ["Navinkumar S <navinkumar.a.singh@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib= "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.3", features = ["mysql"] }
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
r2d2 = "0.8"
r2d2_redis = "0.7.0"
r2d2-diesel = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.8"
frank_jwt = "3.0.0"
failure = "0.1.2"
failure_derive = "0.1.2"
slugify = "0.1.0"
log = "0.4.5"
env_logger = "0.5.13"
